# reactive-transport-cuda

./: CMakeLists.txt  README.md
applications/: reactive-transport.py  reactive_transport.cpp  reactive_transport_cuda.cu  reactive_transport_runtime_profile.cpp
benchmarks/: assembly_kernel.cpp  bench_boost_fiber.cpp  bench_gibbs_energy.cpp  bench_gibbs_energy_gpu.cu  bench_lapack.cpp  bench_lse.cpp  bench_lse_fiber.cpp  bench_lse_gpu.cu  bench_reactive_transport_cpu.cpp  bench_reactive_transport_cuda.cu  bench_smf.cpp  equilibration.cpp  equilibration_runtime_profile.cpp
data/data_bench_gtx_1070/: iterations_step_gpu_v1_cublas_10239.txt  iterations_step_gpu_v1_cublas_1114.txt  iterations_step_gpu_v1_cublas_13.txt  iterations_step_gpu_v1_cublas_1470.txt  iterations_step_gpu_v1_cublas_15.txt  iterations_step_gpu_v1_cublas_152868.txt  iterations_step_gpu_v1_cublas_159.txt  iterations_step_gpu_v1_cublas_188202.txt  iterations_step_gpu_v1_cublas_25213.txt  iterations_step_gpu_v1_cublas_2559.txt  iterations_step_gpu_v1_cublas_26.txt  iterations_step_gpu_v1_cublas_27023.txt  iterations_step_gpu_v1_cublas_278.txt  iterations_step_gpu_v1_cublas_319.txt  iterations_step_gpu_v1_cublas_367.txt  iterations_step_gpu_v1_cublas_40959.txt  iterations_step_gpu_v1_cublas_43899.txt  iterations_step_gpu_v1_cublas_45.txt  iterations_step_gpu_v1_cublas_50427.txt  iterations_step_gpu_v1_cublas_597.txt  iterations_step_gpu_v1_cublas_62083.txt  iterations_step_gpu_v2_cublas_11762.txt  iterations_step_gpu_v2_cublas_12.txt  iterations_step_gpu_v2_cublas_121.txt  iterations_step_gpu_v2_cublas_12606.txt  iterations_step_gpu_v2_cublas_133079.txt  iterations_step_gpu_v2_cublas_18.txt  iterations_step_gpu_v2_cublas_19.txt  iterations_step_gpu_v2_cublas_1940.txt  iterations_step_gpu_v2_cublas_22.txt  iterations_step_gpu_v2_cublas_23525.txt  iterations_step_gpu_v2_cublas_2743.txt  iterations_step_gpu_v2_cublas_28.txt  iterations_step_gpu_v2_cublas_3880.txt  iterations_step_gpu_v2_cublas_393.txt  iterations_step_gpu_v2_cublas_4158.txt  iterations_step_gpu_v2_cublas_5119.txt  iterations_step_gpu_v2_cublas_6303.txt  iterations_step_gpu_v2_cublas_639.txt  iterations_step_gpu_v2_cublas_64.txt  (+2240 more)
data/data_bench_v100/: iterations_step_gpu_v1_cublas_100855.txt  iterations_step_gpu_v1_cublas_105.txt  iterations_step_gpu_v1_cublas_108094.txt  iterations_step_gpu_v1_cublas_1810.txt  iterations_step_gpu_v1_cublas_2079.txt  iterations_step_gpu_v1_cublas_2388.txt  iterations_step_gpu_v1_cublas_259.txt  iterations_step_gpu_v1_cublas_2940.txt  iterations_step_gpu_v1_cublas_42.txt  iterations_step_gpu_v1_cublas_5487.txt  iterations_step_gpu_v1_cublas_557.txt  iterations_step_gpu_v1_cublas_66539.txt  iterations_step_gpu_v1_cublas_735.txt  iterations_step_gpu_v1_cublas_74.txt  iterations_step_gpu_v1_cublas_787.txt  iterations_step_gpu_v1_cublas_81919.txt  iterations_step_gpu_v1_cublas_8914.txt  iterations_step_gpu_v1_cublas_real.txt  iterations_step_gpu_v2_cublas_1194.txt  iterations_step_gpu_v2_cublas_124167.txt  iterations_step_gpu_v2_cublas_175599.txt  iterations_step_gpu_v2_cublas_17828.txt  iterations_step_gpu_v2_cublas_183.txt  iterations_step_gpu_v2_cublas_21.txt  iterations_step_gpu_v2_cublas_226.txt  iterations_step_gpu_v2_cublas_298.txt  iterations_step_gpu_v2_cublas_3151.txt  iterations_step_gpu_v2_cublas_3377.txt  iterations_step_gpu_v2_cublas_342.txt  iterations_step_gpu_v2_cublas_452.txt  iterations_step_gpu_v2_cublas_485.txt  iterations_step_gpu_v2_cublas_6755.txt  iterations_step_gpu_v2_cublas_844.txt  iterations_step_gpu_v2_cublas_9554.txt  iterations_step_gpu_v2_cublas_real_1552386992.txt  iterations_step_gpu_v2_sm_cublas_1039.txt  iterations_step_gpu_v2_sm_cublas_113.txt  iterations_step_gpu_v2_sm_cublas_15520.txt  iterations_step_gpu_v2_sm_cublas_1575.txt  iterations_step_gpu_v2_sm_cublas_16.txt  (+2266 more)
data/data_euler/: iterations_step_cpu_real.txt  runtime_cpu_mt_36_real.txt  runtime_cpu_mt_8_real.txt  runtime_cpu_real.txt  total_runtime_cpu_mt_36_real.txt  total_runtime_cpu_mt_8_real.txt  total_runtime_cpu_real.txt  total_runtime_equilibration_cpu_mt_36_real.txt  total_runtime_equilibration_cpu_mt_8_real.txt  total_runtime_equilibration_cpu_real.txt  total_runtime_transport_cpu_mt_36_real.txt  total_runtime_transport_cpu_mt_8_real.txt  total_runtime_transport_cpu_real.txt
data/data_gtx_1070/: iterations_step_gpu_v1_cublas_real_1551988124.txt  iterations_step_gpu_v2_cublas_real_1551988184.txt  iterations_step_gpu_v2_sm_cublas_real_1551988241.txt  iterations_step_gpu_v2_sm_magma_real_1551988292.txt  runtime_gpu_v1_cublas_real_1551988124.txt  runtime_gpu_v2_cublas_real_1551988184.txt  runtime_gpu_v2_sm_cublas_real_1551988241.txt  runtime_gpu_v2_sm_magma_real_1551988292.txt  total_runtime_equilibration_gpu_v1_cublas_real_1551988124.txt  total_runtime_equilibration_gpu_v2_cublas_real_1551988184.txt  total_runtime_equilibration_gpu_v2_sm_cublas_real_1551988241.txt  total_runtime_equilibration_gpu_v2_sm_magma_real_1551988292.txt  total_runtime_gpu_v1_cublas_real_1551988124.txt  total_runtime_gpu_v2_cublas_real_1551988184.txt  total_runtime_gpu_v2_sm_cublas_real_1551988241.txt  total_runtime_gpu_v2_sm_magma_real_1551988292.txt  total_runtime_transport_gpu_v1_cublas_real_1551988124.txt  total_runtime_transport_gpu_v2_cublas_real_1551988184.txt  total_runtime_transport_gpu_v2_sm_cublas_real_1551988241.txt  total_runtime_transport_gpu_v2_sm_magma_real_1551988292.txt
data/data_v100/: iterations_step_gpu_v2_sm_magma_real_1551989458.txt  (+19 more)
ext/profiler/: CMakeLists.txt  bench_nop_loop_body.cpp  profiler.cpp  profiler.hpp  profiler_io.cpp  test_bench.cpp
include/: chem_pot_table.h  chemistry.h  common.h  common_cuda.h  gauss_partial_pivoting.h  newton_1d.h  thomas.h  transport.h
include/cuda/: batch_lu_solver.h  (+2 more)
refactoring/: CMakeLists.txt  bench_lse_gpu.cu  cuda_equilibrium_solver.h  equilibrium_solver.cpp  equilibrium_solver.cu  queue.h  reactive_transport.cpp  reactive_transport.cu  reactive_transport_unoptimized.cpp  task_aggregator.h
src/: chemistry.cpp  chemistry.cu  common_cuda.cu  thomas.cpp  transport.cpp
(+77 files in other folders)
